--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     </parent>
     <groupId>org.exoplatform.addons.push-notifications</groupId>
     <artifactId>exo-push-notifications</artifactId>
-    <version>1.0.x-SNAPSHOT</version>
+    <version>1.0.0-M05</version>
     <packaging>pom</packaging>
     <name>eXo Push notifications addon</name>
     <description>eXo Push notifications addon</description>
@@ -80,4 +80,8 @@
 
         </dependencies>
     </dependencyManagement>
+
+  <scm>
+    <tag>1.0.0-M05</tag>
+  </scm>
 </project>
